
Template for new versions:

## New Tools

## New Features

## Fixes

## Misc Improvements

## Removed

]]]

# Future

## New Tools
- `fix/stuck-worship`: fix prayer so units don't get stuck in uninterruptible "Worship!" states

## New Features
- `gui/settings-manager`: add import, export, and autoload for work details

## Fixes
- `gui/notify`: persist notification settings when toggled in the UI

## Misc Improvements
- `gui/launcher`: add interface for browsing and filtering commands by tags

## Removed

# 50.11-r7

## New Tools
- `undump-buildings`: (reinstated) remove dump designation from in-use building materials
- `gui/petitions`: (reinstated) show outstanding (or all historical) petition agreements for guildhalls and temples
- `gui/notify`: display important notifications that vanilla doesn't support yet and provide quick zoom links to notification targets.
- `list-waves`: (reinstated) show migration wave information
- `make-legendary`: (reinstated) make a dwarf legendary in specified skills
- `combat-harden`: (reinstated) set a dwarf's resistence to being affected by visible corpses
- `add-thought`: (reinstated) add custom thoughts to a dwarf
- `devel/input-monitor`: interactive UI for debugging input issues

## Fixes
- `gui/design`: clicking the center point when there is a design mark behind it will no longer simultaneously enter both mark dragging and center dragging modes. Now you can click once to move the shape, and click twice to move only the mark behind the center point.
- `fix/retrieve-units`: prevent pulling in duplicate units from offscreen
- `warn-stranded`: when there was at least one truly stuck unit and miners were actively mining, the miners were also confusingly shown in the stuck units list
- `source`: fix issue where removing sources would make some other sources inactive
- `caravan`: display book and scroll titles in the goods and trade dialogs instead of generic scroll descriptions